# git-credential-keepassxc

./: .clog.toml  .travis-merge.sh  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: gh-ph.yml  release.yml  repo-sync.yml  rust.yml
src/: cli.rs  cli.yml  config.rs  git.rs  keepassxc.rs  main.rs  utils.rs
src/keepassxc/: errors.rs  messages.rs
src/keepassxc/messages/: error_code.rs  primitives.rs  structs.rs
src/utils/: base64.rs  callers.rs  socket.rs
