[package]
name = "git-credential-keepassxc"
version = "0.5.1"
authors = ["Frederick Zhang <frederick888@tsundere.moe>"]
edition = "2018"
description = "Helper that allows Git and shell scripts to use KeePassXC as credential store"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Frederick888/git-credential-keepassxc"
readme = "README.md"
repository = "https://github.com/Frederick888/git-credential-keepassxc"
keywords = ["git", "keepass", "keepassxc", "command-line"]
categories = ["command-line-utilities", "authentication", "development-tools"]

[features]
default = []
all = ["notification", "encryption", "yubikey", "strict-caller"]
strict-caller = []
notification = ["notify-rust"]
encryption = ["aes-gcm/aes"]
yubikey = ["yubico_manager", "encryption"]

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
crypto_box = "0.5.0"
base64 = "0.13.0"
rand = "0.7.3"
clap = { version = "2.33.0", features = ["yaml"] }
slog = "2.5.2"
slog-term = "2.5.0"
anyhow = "1.0.28"
once_cell = "1.3.1"
sysinfo = "0.15.0"
directories-next = "2.0.0"
yubico_manager = { version = "0.8.0", optional = true }
aes-gcm = { version = "0.8.0", default-features = false }
notify-rust = { version = "4.0.0", optional = true }
which = "4.0.2"

[target.'cfg(target_os = "linux")'.dependencies]
prctl = "1.0.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"

[dev-dependencies]
mockall = "0.8.0"
sha-1 = "0.9.1"
hmac = "0.10.1"
