[package]
name = "git-credential-keepassxc"
version = "0.12.0"
authors = ["Frederick Zhang <frederick888@tsundere.moe>"]
edition = "2021"
description = "Helper that allows Git and shell scripts to use KeePassXC as credential store"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Frederick888/git-credential-keepassxc"
readme = "README.md"
repository = "https://github.com/Frederick888/git-credential-keepassxc"
keywords = ["git", "keepass", "keepassxc", "command-line"]
categories = ["command-line-utilities", "authentication", "development-tools"]

[features]
default = []
all = ["notification", "encryption", "yubikey", "strict-caller"]
strict-caller = []
notification = ["notify-rust"]
encryption = ["aes-gcm/aes", "aes-gcm/alloc"]
yubikey = ["yubico_manager", "encryption"]

[dependencies]
aes-gcm = { version = "0.10.1", default-features = false }
anyhow = "1.0.28"
base64 = "0.21.0"
clap = { version = "3.1.18", features = ["derive"] }
crypto_box = "0.8.1"
directories-next = "2.0.0"
notify-rust = { version = "4.5.9", optional = true }
num_enum = "0.5.2"
once_cell = "1.3.1"
rand = "0.8.3"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
slog = "2.5.2"
slog-term = "2.5.0"
strum = { version = "0.24.0", features = ["derive"] }
sysinfo = "0.27.7"
tabwriter = "1.2.1"
which = "4.0.2"
yubico_manager = { version = "0.9.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
prctl = "1.0.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"

[dev-dependencies]
mockall = "0.11.0"
sha-1 = "0.10.0"
hmac = "0.12.0"
